	     in mds subsystem.
	     Remove 2.4 kernel check from lproc_osc.c, osc_request.c in osc
	     subsystem.
	     Remove 2.4 kernel check from filter.c, lproc_obdfilter.c in 
	     obdfilter subsystem.
	     Remove 2.4 kernel code from lustre/obdecho/echo_client.c.
	     Remove 2.4 kernel check from lustre/mgs/lproc_mgs.c,
	     lustre/mgs/mgs_fs.c.

Severity   : enhancement
Bugzilla   : 13690
Description: Build SLES10 patchless client fails
Details    : The configure was broken by run ./configure with 
             --with-linux-obj=.... argument for patchless client. When the
	     configure use --with-linux-obj, the LINUXINCLUDE= -Iinclude
	     can't search header adequately. Use absolute path such as 
	     -I($LINUX)/include instead. 

Severity   : normal
Bugzilla   : 13888
Description: interrupt oig_wait produce painc on resend.
Details    : brw_redo_request can be used for resend requests from ptlrpcd and
	     private set, and this produce situation when rq_ptlrpcd_data not
	     copyed to new allocated request and triggered LBUG on assert 
	     req->rq_ptlrpcd_data != NULL. But this member used only for wakeup
	     ptlrpcd set if request is changed and can be safety changed to use
	     rq_set directly.

Severity   : normal
Bugzilla   : 13497
Description: LASSERT_{REQ,REP}SWAB macros are buggy
Details    : If SWAB_PARANOIA is disabled, the LASSERT_REQSWAB and
             LASSERT_REPSWAB macros become no-ops, which is incorrect. Drop
              these macros and replace them with their difinitions instead.

Severity   : normal
Bugzilla   : 13521
Description: Update kernel patches for SLES10 2.6.16.53-0.8.
Details    : Update which_patch & target file for SLES10 latest kernel.

Bugzilla   : 12411
Description: Remove client patches from SLES 10 kernel.
Details    : This causes SLES 10 clients to behave as patchless clients
             even on a Lustre-patched (server) kernel.

Severity   : enhancement
Bugzilla   : 2262